[project]
name = "healthcare-openenv"
version = "0.1.0"
description = "Healthcare OpenEnv environment for AI diagnosis"
authors = [
    {name = "Chandransh"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"